# gambatte-terminal

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.libsixel  MANIFEST.in  README.md  _config.yml  _gambatte.pyx  gambatte-terminal.py  index.md  libgambatte.pxd  pyproject.toml  setup.py  toc.md
.github/workflows/: build.yml
ext/: _gambatte.pyx  input.h  libgambatte.pxd
gambaterm/: __main__.py  ansi_escape_code.py  audio.py  blessed_keyboard_input.py  colors.py  console.py  constants.py  controller_input.py  dom_codes.py  file_input.py  halfblit.pyi  halfblock.py  input_getter.py  inputs.py  keyboard_input.py  keyboard_protocol.py  keyboard_protocol_input.py  keys.py  kittyblit.py  libgambatte.pyi  main.py  octant.py  octblit.pyi  pynput_keyboard_input.py  remote_terminal.py  run.py  sextant.py  sextblit.pyi  sixel_scaler.py  ssh.py  ssh_app_session.py  telnet.py  telnet_app_session.py  telnet_input.py  termblit.pyi  wayland_input.py  x11_keyboard_input.py  xinput.py
libgambatte/: README.md
libgambatte/src/: cpu.cpp  video.cpp
libgambatte_ext/: _libgambatte.pxd  input.h  libgambatte.pyx
patches/: cartridge_windows.patch  statesaver_windows.patch  unzip_windows.patch
scripts/: make_dom_codes_module.py
sixel_ext/: config.h  sixel.h  sixelblit.pyx
termblit_ext/: bitonal.pxi  blitcommon.pxi  halfblit.pyx  octblit.pyx  sextblit.pyx  termblit.pyx
tests/: test_gambaterm.py  test_halfblock.py  test_octant.py  test_sextant.py
