[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.13",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pygame",
    "samplerate",
    "sounddevice",
    "pynput",
    "Xlib.*"
]
ignore_missing_imports = true

[tool.cibuildwheel]
build = "cp*-win_amd64 cp*-manylinux_x86_64 cp*-macosx_x86_64 cp*-macosx_arm64"
skip = "cp36*"
test-skip = "cp38-macosx_*:arm64"

[tool.cibuildwheel.windows]
test-command = "gambaterm --help"

[tool.cibuildwheel.macos]
test-requires = "pytest"
test-command = "pytest {project}/tests -v -k 'test_gambaterm[non-interactive]'"

[tool.cibuildwheel.linux]
before-all = "yum install -y libsamplerate portaudio openssh-clients"
test-requires = "pytest"
test-command = "pytest {project}/tests -v"
