[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "Cython>=3.2.1",
    "numpy>=2.0,<3",
]
build-backend = "setuptools.build_meta"

[project]
name = "gambaterm"
version = "1.1.2"
description = "A terminal frontend for gambatte game boy color emulator"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
    {name = "Vincent Michel", email = "vxgmichel@gmail.com"}
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "asyncssh>=2.9,<3.0.0",
    "blessed>=1.38.0,<2",
    "sounddevice>=0.4,<1.0",
    "samplerate>=0.1.0,<0.2.0",
    "python-xlib; sys_platform == 'linux'",
    "pynput; sys_platform != 'linux'",
    "telnetlib3>=4.0.1,<5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
controller-support = ["pygame>=1.9.5,<2.0.0"]

[project.urls]
Homepage = "https://github.com/vxgmichel/gambatte-terminal"

[project.scripts]
gambaterm = "gambaterm.main:main"
gambaterm-ssh = "gambaterm.ssh:main"
gambaterm-telnet = "gambaterm.telnet:main"

[tool.setuptools]
packages = ["gambaterm"]

[tool.setuptools.package-data]
gambaterm = ["py.typed", "*.pyi"]

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pygame",
    "samplerate",
    "sounddevice",
    "pynput",
    "Xlib.*",
    "telnetlib3",
    "telnetlib3.*",
]
ignore_missing_imports = true

[tool.cibuildwheel]
skip = ["cp3??t-*", "cp*-musllinux_*", "*-win32"]

[tool.cibuildwheel.windows]
before-all = [
    "git -C gambatte-core apply ../patches/statesaver_windows.patch ../patches/unzip_windows.patch ../patches/cartridge_windows.patch",
    "vcpkg install zlib:x64-windows-static-md",
    "pip install delvewheel",
]
environment = { CL = "/I C:/vcpkg/installed/x64-windows-static-md/include", LINK = "/LIBPATH:C:/vcpkg/installed/x64-windows-static-md/lib" }
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
test-command = "gambaterm --help"

[tool.cibuildwheel.macos]
test-requires = "pytest"
test-command = "pytest {project}/tests -v -k 'test_gambaterm[non-interactive]'"

[tool.cibuildwheel.linux]
before-all = "yum install -y libsamplerate portaudio openssh-clients"
test-requires = "pytest"
test-command = "pytest {project}/tests -v"
